// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.testingauth";
option java_outer_classname = "TestingAuthProto";
option objc_class_prefix = "HLW";

package testingauth;

service Auth {
    rpc startTest(PretestTokens) returns (Ack) {}
    rpc getResult(Check) returns (TestResult) {}
}

message PretestTokens {
    repeated string pretest = 1;
}

message Ack {
    int32 ack = 1;
}

message Check {
    string date = 1;
    string token = 2;
}

message TestResult {
    string result = 1;
}
